--- a/gn_config/main_config.gn
+++ b/gn_config/main_config.gn
@@ -45,34 +45,20 @@ assert(compiler != "", "Unsupported OS $target_os")
 # Configs
 # ------------------------------------------------------------------------------
 
-config("default_include_dirs") {
-  include_dirs = [
-    "${root_build_dir}",
-    "//",
-    "//third_party/include",
-    root_gen_dir,
-  ]
-
-  if (target_os == "linux") {
-    include_dirs += [
-      "/usr/include",
-    ]
-  }
-}
-
 # Default configs for every build (cased by OS target)
 _configs = [
   "//:default_include_dirs",
   "//gn_config/compilers:compiler",
+  "//gn_config/compilers:default_warnings",
 ]
 
 if (is_debug) {
   _configs += [
-    "//gn_config/config/compilers:debug",
+    "//gn_config/compilers:debug",
   ]
 } else {
   _configs += [
-    "//gn_config/config/compilers:release",
+    "//gn_config/compilers:release",
   ]
 }
 
