Added a nice line counter.
Because... why not.

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1,3 +1,6 @@
+# Copyright 2019, Cristián Donoso.
+# This code has a BSD license. See LICENSE.
+
 declare_args() {
   extra_includes = []
   extra_libs = []
