Changed BlockAllocator to use a generic interface.
This will make MemoryBlock not be templated and permite easier use by
containers.

--- a/tests/BUILD.gn
+++ b/tests/BUILD.gn
@@ -12,6 +12,10 @@ source_set("tests_lib") {
 
   public_deps = [
     "//third_party/catch2",
+  ]
+
+  deps = [
+    "//rothko/memory",
     "//rothko/utils",
   ]
 }
