--- a/rothko/memory/BUILD.gn
+++ b/rothko/memory/BUILD.gn
@@ -6,6 +6,10 @@ source_set("memory") {
     "block_allocator.h",
   ]
 
+  sources = [
+    "block_allocator.cc",
+  ]
+
   deps = [
     "//rothko/utils",
   ]
