Initial OpenGL Backend.
This is just the initialization code, but it required bringing gl3w as a
dependency.

Added a skeleton example to which to test opengl functionality.

--- a/examples/BUILD.gn
+++ b/examples/BUILD.gn
@@ -21,4 +21,15 @@ if (sdl_enabled && opengl_enabled) {
       "//rothko/window:sdl_opengl",
     ]
   }
+
+  executable("sdl_opengl") {
+    sources = [
+      "sdl_opengl.cc",
+    ]
+
+    deps = [
+      "//rothko/graphics:opengl",
+      "//rothko/window:sdl_opengl",
+    ]
+  }
 }
