--- a/rothko/utils/BUILD.gn
+++ b/rothko/utils/BUILD.gn
@@ -8,12 +8,14 @@ source_set("utils") {
     "location.h",
     "logging.h",
     "macros.h",
+    "multithreading.h",
     "strings.cc",
   ]
 
   sources = [
     "file.cc",
     "logging.cc",
+    "multithreading.cc",
     "strings.cc",
   ]
 
