Initial shader implementation.
This sets the initial skeleton about how the shader loading is hooked up
with the renderer.

Adds the basic Shader struct, but the uniforms are not set up.

--- a/rothko/graphics/common/BUILD.gn
+++ b/rothko/graphics/common/BUILD.gn
@@ -5,10 +5,12 @@ source_set("common") {
   public = [
     "renderer.h",
     "renderer_backend.h",
+    "shader.h",
   ]
 
   sources = [
     "renderer.cc",
+    "shader.cc",
   ]
 
   deps = [
