Initial Shader Parse Skeleton
Reading shaders is easy, but parsing the uniforms is a bit more
contrived so should be a separate set of CLs.

--- a/rothko/graphics/opengl/BUILD.gn
+++ b/rothko/graphics/opengl/BUILD.gn
@@ -5,6 +5,8 @@ source_set("opengl") {
   sources = [
     "renderer_backend.cc",
     "renderer_backend.h",
+    "shader.cc",
+    "shader.h",
   ]
 
   deps = [
