Added initial uniform parsing.
It correctly parses the element strings, but doesn't calculate the
offsets yet.

TEST=Added tests/shader_parsing.cc
     Requires negative tests yet.

--- a/tests/BUILD.gn
+++ b/tests/BUILD.gn
@@ -7,6 +7,7 @@ source_set("tests_lib") {
   sources = [
     "math.cc",
     "memory.cc",
+    "shader_parsing.cc",
     "strings.cc",
     "vector.cc",
   ]
@@ -17,6 +18,7 @@ source_set("tests_lib") {
 
   deps = [
     "//rothko/containers",
+    "//rothko/graphics/common",
     "//rothko/memory",
     "//rothko/utils",
   ]
