--- a/rothko/graphics/opengl/BUILD.gn
+++ b/rothko/graphics/opengl/BUILD.gn
@@ -1,6 +1,7 @@
 # Copyright 2019, Cristián Donoso.
 # This code has a BSD license. See LICENSE.
 
+# Separated for testability (don't bring in graphics dependencies).
 source_set("opengl") {
   sources = [
     "renderer_backend.cc",
