Initial Shader Parse Skeleton (#4)
* Initial Shader Parse Skeleton

Reading shaders is easy, but parsing the uniforms is a bit more
contrived so should be a separate set of CLs.

* Added initial uniform parsing.

It correctly parses the element strings, but doesn't calculate the
offsets yet.

TEST=Added tests/shader_parsing.cc
     Requires negative tests yet.

* Added UBO Layout calculation + tests

* Common Mesh & Texture code.

--- a/rothko/graphics/opengl/BUILD.gn
+++ b/rothko/graphics/opengl/BUILD.gn
@@ -1,10 +1,13 @@
 # Copyright 2019, Cristián Donoso.
 # This code has a BSD license. See LICENSE.
 
+# Separated for testability (don't bring in graphics dependencies).
 source_set("opengl") {
   sources = [
     "renderer_backend.cc",
     "renderer_backend.h",
+    "shader.cc",
+    "shader.h",
   ]
 
   deps = [
