More work on getting OpenGL up and running.
Added Defer, which permits to function at the end of a scope, with
tests. Useful for cleanup.

--- a/tests/BUILD.gn
+++ b/tests/BUILD.gn
@@ -5,9 +5,9 @@
 source_set("tests_lib") {
   testonly = true
   sources = [
+    "defer.cc",
     "math.cc",
     "memory.cc",
-    "shader_parsing.cc",
     "strings.cc",
     "vector.cc",
   ]
