Initial implementation of Execute Render commands.
The code compiles but still needs to be exercised.

--- a/rothko/graphics/common/BUILD.gn
+++ b/rothko/graphics/common/BUILD.gn
@@ -6,6 +6,7 @@ source_set("common") {
     "mesh.h",
     "renderer.h",
     "renderer_backend.h",
+    "render_commands.h",
     "shader.h",
     "texture.h",
   ]
