--- a/rothko/math/BUILD.gn
+++ b/rothko/math/BUILD.gn
@@ -6,6 +6,10 @@ source_set("math") {
     "vec.h",
   ]
 
+  sources = [
+    "vec.cc",
+  ]
+
   # TODO(Cristian): This dependency is only for printing.
   #                 In the future might be nice to have a clean math library
   #                 with no dependencies and have a nice wrapper that has more
