Reordering of render commands.
* This makes them less batcheable, but is more understandable.
* Added timing info.

--- a/examples/cube/BUILD.gn
+++ b/examples/cube/BUILD.gn
@@ -8,6 +8,7 @@ executable("cube") {
 
   deps = [
     "//rothko/graphics:opengl",
+    "//rothko/platform",
     "//rothko/window:sdl_opengl",
   ]
 }
