--- a/rothko/utils/BUILD.gn
+++ b/rothko/utils/BUILD.gn
@@ -9,7 +9,8 @@ source_set("utils") {
     "logging.h",
     "macros.h",
     "multithreading.h",
-    "strings.cc",
+    "strings.h",
+    "types.h",
   ]
 
   sources = [
