--- a/gn_config/toolchains/BUILD.gn
+++ b/gn_config/toolchains/BUILD.gn
@@ -10,7 +10,7 @@ toolchain("msvc") {
     pdbname = "{{output}}_c.pdb"
     command = "cl.exe /nologo {{defines}} /showIncludes /FC /FS /Fd$pdbname {{include_dirs}} {{cflags}} /TC /c {{source}} /Fo{{output}}"
     outputs = [
-      "{{source_out_dir}}/{{source_name_part}}.o" ,
+      "{{source_out_dir}}/{{source_name_part}}.o",
     ]
     description = "CC {{output}}"
   }
@@ -19,7 +19,7 @@ toolchain("msvc") {
     pdbname = "{{output}}_cc.pdb"
     command = "cl.exe /nologo {{defines}} /showIncludes /FC /FS /Fd$pdbname {{include_dirs}} {{cflags}} {{cflags_cc}} /TP /c {{source}} /Fo{{output}}"
     outputs = [
-      "{{source_out_dir}}/{{source_name_part}}.o" ,
+      "{{source_out_dir}}/{{source_name_part}}.o",
     ]
     description = "CXX {{output}}"
   }
@@ -27,12 +27,13 @@ toolchain("msvc") {
   tool("link") {
     command = "link.exe /nologo {{ldflags}} /OUT:{{output}} /PDB:{{output}}.pdb {{inputs}} {{solibs}} {{libs}}"
     outputs = [
-      "{{root_out_dir}}/{{target_output_name}}.exe"
+      "{{root_out_dir}}/{{target_output_name}}.exe",
     ]
     description = "LINK {{output}}"
   }
 
-  stamp_path = rebase_path("//gn_config/toolchains/msvc_stamp.py", root_build_dir)
+  stamp_path =
+      rebase_path("//gn_config/toolchains/msvc_stamp.py", root_build_dir)
   tool("stamp") {
     command = "$python_path $stamp_path {{output}}"
     description = "STAMP {{output}}"
@@ -53,7 +54,7 @@ toolchain("clang") {
     depsformat = "gcc"
     command = "clang++ -xc -MMD -MF $depfile {{defines}} {{include_dirs}} {{cflags}} {{cflags_c}} -c {{source}} -o {{output}}"
     outputs = [
-      "{{source_out_dir}}/{{source_name_part}}.o" ,
+      "{{source_out_dir}}/{{source_name_part}}.o",
     ]
     description = "CC {{output}}"
   }
@@ -62,7 +63,7 @@ toolchain("clang") {
     depsformat = "gcc"
     command = "clang++ -xc++ -MMD -MF $depfile {{defines}} {{include_dirs}} {{cflags}} {{cflags_cc}} -c {{source}} -o {{output}}"
     outputs = [
-      "{{source_out_dir}}/{{source_name_part}}.o" ,
+      "{{source_out_dir}}/{{source_name_part}}.o",
     ]
     description = "CXX {{output}}"
   }
@@ -70,7 +71,7 @@ toolchain("clang") {
   tool("link") {
     command = "clang++ {{inputs}} {{solibs}} {{ldflags}} {{libs}} -o {{output}}"
     outputs = [
-      "{{root_out_dir}}/{{target_output_name}}"
+      "{{root_out_dir}}/{{target_output_name}}",
     ]
     description = "LINK {{output}}"
   }
