--- a/BUILD.gn
+++ b/BUILD.gn
@@ -17,9 +17,7 @@ config("default_include_dirs") {
   libs = extra_libs
 
   if (target_os == "linux") {
-    include_dirs += [
-      "/usr/include",
-    ]
+    include_dirs += [ "/usr/include" ]
   }
 }
 
