--- a/examples/cube/BUILD.gn
+++ b/examples/cube/BUILD.gn
@@ -9,6 +9,7 @@ executable("cube") {
   deps = [
     "//rothko/graphics:opengl",
     "//rothko/platform",
+    "//rothko/ui:imgui",
     "//rothko/window:sdl_opengl",
   ]
 }
