More imgui debugging

--- a/examples/cube/BUILD.gn
+++ b/examples/cube/BUILD.gn
@@ -11,5 +11,6 @@ executable("cube") {
     "//rothko/platform",
     "//rothko/ui:imgui",
     "//rothko/window:sdl_opengl",
+    "//rothko/math",
   ]
 }
