Added background thread logging.

--- a/examples/cube/BUILD.gn
+++ b/examples/cube/BUILD.gn
@@ -12,5 +12,6 @@ executable("cube") {
     "//rothko/ui:imgui",
     "//rothko/window:sdl_opengl",
     "//rothko/math",
+    "//rothko/logging",
   ]
 }
