Created open file dialog interface.
Implemented windows version.
Very basic.

--- a/rothko/platform/BUILD.gn
+++ b/rothko/platform/BUILD.gn
@@ -4,6 +4,7 @@
 # Platform is the a base level library, it has no dependencies.
 source_set("platform") {
   public = [
+    "dialogs.h",
     "paths.h",
     "platform.h",
     "timing.h",
