--- a/gn_config/compilers/BUILD.gn
+++ b/gn_config/compilers/BUILD.gn
@@ -31,7 +31,13 @@ if (compiler == "msvc") {
       "/GR-",
     ]
 
-    ldflags = [ "/SUBSYSTEM:CONSOLE" ]
+    ldflags = [
+      "/SUBSYSTEM:CONSOLE" ,
+      "/opt:ref",
+      "user32.lib",
+      "comctl32.lib",
+      "Ole32.lib",
+    ]
   }
 
   config("debug") {
