--- a/rothko/platform/BUILD.gn
+++ b/rothko/platform/BUILD.gn
@@ -22,7 +22,10 @@ source_set("platform") {
   } else if (is_linux) {
     sources += [ "platform_linux.cc" ]
   } else if (is_osx) {
-    sources += [ "platform_macos.cc" ]
+    # NOTE(Cristian): .mm means an Objective-C/C++ hybrid file.
+    #                 Gets compiled with the objcxx tool within the clang toolchain.
+    #                 See gn_config/toolchains/BUILD.gn
+    sources += [ "platform_macos.mm" ]
   } else {
     assert(false, "Unhandled OS: $target_os")
   }
