Moved all platform code to one header.
Having many of them was a mess.
Implemented linux open file dialog.

--- a/rothko/platform/BUILD.gn
+++ b/rothko/platform/BUILD.gn
@@ -4,15 +4,11 @@
 # Platform is the a base level library, it has no dependencies.
 source_set("platform") {
   public = [
-    "dialogs.h",
-    "paths.h",
     "platform.h",
-    "timing.h",
   ]
 
   sources = [
-    "paths.cc",
-    "timing.cc",
+    "platform.cc",
   ]
 
   # Platform specific sources ----------------------------------------------------------------------
