--- a/rothko/graphics/common/BUILD.gn
+++ b/rothko/graphics/common/BUILD.gn
@@ -3,6 +3,7 @@
 
 source_set("common") {
   public = [
+    "color.h",
     "mesh.h",
     "render_commands.h",
     "renderer.h",
@@ -12,6 +13,7 @@ source_set("common") {
   ]
 
   sources = [
+    "color.cc",
     "mesh.cc",
     "render_commands.cc",
     "renderer.cc",
