Removed the RendererBackend indirection.
It wasn't needed as the graphics backend can be compiled in directly and
not so many jumps were needed *at all*.

This also allows faster iteration as there are fewer functions to change
for every damn little thing.

--- a/examples/cube/BUILD.gn
+++ b/examples/cube/BUILD.gn
@@ -7,7 +7,7 @@ executable("cube") {
   ]
 
   deps = [
-    "//rothko/graphics:opengl",
+    "//rothko/graphics",
     "//rothko/logging",
     "//rothko/math",
     "//rothko/platform",
