--- a/rothko/graphics/opengl/BUILD.gn
+++ b/rothko/graphics/opengl/BUILD.gn
@@ -19,7 +19,7 @@ source_set("opengl") {
   ]
 
   deps = [
-    "//rothko/graphics/common",
+    "//rothko/graphics:common",
     "//rothko/math",
     "//rothko/window/common",
     "//third_party/gl3w",
