--- a/examples/emulator/BUILD.gn
+++ b/examples/emulator/BUILD.gn
@@ -15,7 +15,7 @@ executable("emulator") {
 
   deps = [
     "//rothko:game",
-    "//rothko/graphics:opengl",
+    "//rothko/graphics",
     "//rothko/ui:imgui",
     "//rothko/window:sdl_opengl",
   ]
