--- a/examples/cube/BUILD.gn
+++ b/examples/cube/BUILD.gn
@@ -13,9 +13,9 @@ executable("cube") {
     "//rothko/logging",
     "//rothko/math",
     "//rothko/platform",
+    "//rothko/scene",
     "//rothko/ui:imgui",
     "//rothko/window:sdl_opengl",
-
     "//third_party:imguizmo",
   ]
 }
