--- a/rothko/scene/BUILD.gn
+++ b/rothko/scene/BUILD.gn
@@ -5,6 +5,8 @@ source_set("scene") {
   sources = [
     "camera.cc",
     "camera.h",
+    "grid.cc",
+    "grid.h",
     "lines.cc",
     "lines.h",
   ]
