[emulator] Moved texture creation out of main.
It was warranting its own place.
Also created the window information display.

--- a/examples/emulator/BUILD.gn
+++ b/examples/emulator/BUILD.gn
@@ -11,6 +11,8 @@ executable("emulator") {
     "quad.h",
     "shader.cc",
     "shader.h",
+    "textures.cc",
+    "textures.h",
   ]
 
   deps = [
