[emulator] Added Basic MBC Infrastructure.
Memory Bank Controllers (MBC) are the way memory is interpreted between
different catdriges.

Added the basic Write/Read functions that access the memory. It still
neeneeds to be hooked up to the rest of the system.

Added an ImGui third party memory viewer.

--- a/examples/emulator/BUILD.gn
+++ b/examples/emulator/BUILD.gn
@@ -3,20 +3,22 @@
 
 source_set("lib") {
   sources = [
+    "cpu.cc",
+    "cpu.h",
+    "cpu_instructions.cc",
+    "cpu_instructions.h",
     "display.cc",
     "display.h",
     "memory.cc",
     "memory.h",
+    "memory_bank_controllers.cc",
+    "memory_bank_controllers.h",
     "quad.cc",
     "quad.h",
     "shader.cc",
     "shader.h",
     "textures.cc",
     "textures.h",
-    "cpu.cc",
-    "cpu.h",
-    "cpu_instructions.cc",
-    "cpu_instructions.h",
   ]
 
   deps = [
@@ -24,6 +26,7 @@ source_set("lib") {
     "//rothko/graphics",
     "//rothko/ui:imgui",
     "//rothko/window:sdl_opengl",
+    "//third_party:imgui_extras",
   ]
 }
 
