[emulator] Overall architecture concepts.
Added a place for CPU, Audio, Display to live within the Gameboy struct.
This permits routing of events through memory writes.

--- a/examples/emulator/BUILD.gn
+++ b/examples/emulator/BUILD.gn
@@ -3,12 +3,15 @@
 
 source_set("lib") {
   sources = [
+    "audio.cc",
+    "audio.h",
     "cpu.cc",
     "cpu.h",
     "cpu_instructions.cc",
     "cpu_instructions.h",
     "display.cc",
     "display.h",
+    "gameboy.h",
     "memory.cc",
     "memory.h",
     "memory_bank_controllers.cc",
