[emulator] Added disassembler logic.
The main algorithm and data structures are set and can already be used.
Created a simple imgui window to show the results. There is a bug in
therthere :(

Having an opcode to name/description switch is also needed.

--- a/examples/emulator/BUILD.gn
+++ b/examples/emulator/BUILD.gn
@@ -9,6 +9,8 @@ source_set("lib") {
     "cpu.h",
     "cpu_instructions.cc",
     "cpu_instructions.h",
+    "disassembler.cc",
+    "disassembler.h",
     "display.cc",
     "display.h",
     "gameboy.h",
