--- a/examples/emulator/BUILD.gn
+++ b/examples/emulator/BUILD.gn
@@ -9,6 +9,8 @@ source_set("lib") {
     "cpu.h",
     "cpu_instructions.cc",
     "cpu_instructions.h",
+    "cpu_operations.cc",
+    "cpu_operations.h",
     "disassembler.cc",
     "disassembler.h",
     "display.cc",
