[emulator] Added Catridge parsing.
This checks for the basic values in a catridge headers and copies the
information over.

--- a/examples/emulator/BUILD.gn
+++ b/examples/emulator/BUILD.gn
@@ -18,8 +18,8 @@ source_set("lib") {
     "gameboy.h",
     "memory.cc",
     "memory.h",
-    "memory_bank_controllers.cc",
-    "memory_bank_controllers.h",
+    "catridge.cc",
+    "catridge.h",
     "quad.cc",
     "quad.h",
     "shader.cc",
