[emulator] Some code reorganization.
Collapsed more concepts into the Gameboy struct and removed some clutter
from the windows.

--- a/examples/emulator/BUILD.gn
+++ b/examples/emulator/BUILD.gn
@@ -15,6 +15,7 @@ source_set("lib") {
     "disassembler.h",
     "display.cc",
     "display.h",
+    "gameboy.cc",
     "gameboy.h",
     "memory.cc",
     "memory.h",
