--- a/examples/gltf/BUILD.gn
+++ b/examples/gltf/BUILD.gn
@@ -1,7 +1,7 @@
 # Copyright 2019, Cristián Donoso.
 # This code has a BSD license. See LICENSE.
 
-executable("gltf") {
+executable("gltf_viewer") {
   sources = [
     "main.cc",
   ]
@@ -11,5 +11,21 @@ executable("gltf") {
     "//third_party/tiny_gltf",
     "//rothko/window:sdl_opengl",
   ]
+}
 
+executable("gltf2rothko") {
+  sources = [
+    "gltf2rothko.cc",
+  ]
+
+  deps = [
+    "//rothko:game",
+  ]
+}
+
+group("gltf") {
+  deps = [
+    ":gltf_viewer",
+    ":gltf2rothko",
+  ]
 }
