--- a/rothko/models/BUILD.gn
+++ b/rothko/models/BUILD.gn
@@ -1,16 +1,10 @@
 # Copyright 2019, Cristián Donoso.
 # This code has a BSD license. See LICENSE.
 
-source_set("scene") {
+source_set("models") {
   sources = [
-    "camera.cc",
-    "camera.h",
-    "grid.cc",
-    "grid.h",
-    "lines.cc",
-    "lines.h",
-    "transform.cc",
-    "transform.h",
+    "cube.cc",
+    "cube.h",
   ]
 
   deps = [
