--- a/rothko/window/sdl/BUILD.gn
+++ b/rothko/window/sdl/BUILD.gn
@@ -29,7 +29,7 @@ config("sdl2_config") {
     handled = true
   } else if (target_os == "linux") {
     if (compiler == "clang") {
-      libs = [ "-lSDL2" ]
+      libs = [ "SDL2" ]
       if ("$sdl_lib_path" != "") {
         ldflags = [ "-L${sdl_lib_path}" ]
       }
