--- a/rothko/scene/BUILD.gn
+++ b/rothko/scene/BUILD.gn
@@ -9,6 +9,8 @@ source_set("scene") {
     "grid.h",
     "lines.cc",
     "lines.h",
+    "scene_graph.cc",
+    "scene_graph.h",
     "transform.cc",
     "transform.h",
   ]
