[scene_graph] Updated scene graph API.
Removed the concept of scene graph from the Transform API.
Updated the example.

There is still a bug though.

--- a/examples/emulator/BUILD.gn
+++ b/examples/emulator/BUILD.gn
@@ -29,7 +29,7 @@ source_set("lib") {
     "textures.h",
   ]
 
-  deps = [
+  public_deps = [
     "//rothko:game",
     "//rothko/graphics",
     "//rothko/ui:imgui",
