[scene_graph] Functioning scene graph.
Gets updated from the root down correctly.

Removed exceptions and RTTI.
Removed iterator bound checking on debug mode on MSVC.

--- a/examples/scene_graph/BUILD.gn
+++ b/examples/scene_graph/BUILD.gn
@@ -8,6 +8,7 @@ executable("scene_graph") {
 
   deps = [
     "//rothko:game",
+    "//rothko/ui:imgui",
     "//rothko/graphics/default_shaders",
     "//rothko/window:sdl_opengl",
   ]
