--- a/gn_config/compilers/BUILD.gn
+++ b/gn_config/compilers/BUILD.gn
@@ -5,7 +5,6 @@
 
 if (compiler == "msvc") {
   config("default_warnings") {
-    defines = [ "NOMINMAX" ]
     cflags = [
       "/W4",
       "/WX",
@@ -23,12 +22,15 @@ if (compiler == "msvc") {
   }
 
   config("compiler") {
-    defines = [ "NOMINMAX" ]
+    defines = [
+      "NOMINMAX",                   # Remove windows stupid leaky defines.
+      "_ITERATOR_DEBUG_LEVEL=0",    # Remove MSVC C++ iterator checking.
+    ]
 
     cflags_cc = [
       "/std:c++latest",
-      "/EHsc",
-      "/GR-",
+      "/EHsc",                     # Disable exceptions.
+      "/GR-",                       # Disable RTTI.
     ]
 
     ldflags = [
@@ -68,7 +70,11 @@ if (compiler == "clang") {
   }
 
   config("compiler") {
-    cflags_cc = [ "-std=c++1z" ]
+    cflags_cc = [
+      "-std=c++1z",
+      "-fno-exceptions",
+      "-fno-rtti",
+    ]
   }
 
   config("debug") {
